[UCDC-185] fix textoverflow

--- a/cms/static/sass/studio-main-v1.scss
+++ b/cms/static/sass/studio-main-v1.scss
@@ -1,6 +1,7 @@
 @import 'cms/static/sass/studio-main-v1';
 
-.view-dashboard .course-item .course-link {
+.view-dashboard .course-item .course-link,
+.view-certificates .actual-course-title {
     word-break: break-word;
 }
 
