--- a/lms/static/sass/blocks/_header.scss
+++ b/lms/static/sass/blocks/_header.scss
@@ -317,6 +317,7 @@
 		color: #313131;
 		text-align: center;
 		padding-bottom: 20px;
+		word-break: break-word;
 	}
 
 	.dropdown-user-menu a {
