--- a/lms/static/sass/custom.scss
+++ b/lms/static/sass/custom.scss
@@ -21,7 +21,7 @@
 @import "blocks/shopping-cart";
 @import "blocks/account-settings";
 
-*:not(.fa):not(.glyphicon):not([class*='sorting']):not([class*="icon-cc"]) {
+*:not(.fa):not(.glyphicon):not([class*='sorting']):not([class*="icon-cc"]):not([class*='mce-']) {
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
